# self_collision_detection_controller

./: CHANGELOG.rst  CMakeLists.txt  collision_controller.xml  package.xml  safety_controller.xml
config/: collision_controller.yaml  triago.srdf  triago.urdf
include/collision_controller/: collision_controller.hpp
include/safety_controller/: safety_controller.hpp
include/self_collision_detection_controller/: collision_controller.hpp
launch/: collision_controller.launch.py
src/: collision_controller.cpp  collision_controller.yaml  safety_controller.cpp  safety_controller.yaml
