<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>collision_controller</name>
  <version>0.0.2</version>
  <description>Controller for check collision.</description>
  <maintainer email="viviana.morlando@pal-robotics.com">Viviana Morlando</maintainer>
   <license>Propietary</license>


  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>generate_parameter_library</build_depend>

  <depend>angles</depend>
  <depend>backward_ros</depend>
  <depend>joint_limits</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>ros2_control</depend>
  <depend>hardware_interface</depend>
  <depend>parameter_traits</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>std_srvs</depend>
  <depend>pinocchio</depend>
  <depend>change_controllers</depend>
  <depend>change_controllers_interfaces</depend>
  <depend>rclcpp_action</depend>
  <depend>visualization_msgs</depend>
  <depend>moveit_msgs</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface_testing</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
